language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_constant_from_import.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod.{something}\n\npub fn main() {\n  something + mod.something\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub const something = 10

fn wibble() {
  something
}


-- app.gleam

import mod.{something}
            ↑▔▔▔▔▔▔▔▔ 

pub fn main() {
  something + mod.something
}


----- AFTER RENAME
-- mod.gleam

pub const something = 10

fn wibble() {
  something
}


-- app.gleam

import mod.{something as ten}

pub fn main() {
  ten + mod.something
}
