language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_constant_shadowed_by_field_access.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub const something = 10\n"
---
----- BEFORE RENAME
-- mod.gleam

import app

type App {
  App(something: Int)
}

pub fn main() {
  let app = App(10)
  app.something
}


-- app.gleam

pub const something = 10
          ↑▔▔▔▔▔▔▔▔     


----- AFTER RENAME
-- mod.gleam

import app

type App {
  App(something: Int)
}

pub fn main() {
  let app = App(10)
  app.something
}


-- app.gleam

pub const constant = 10
