language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_external_javascript_function_with_pure_gleam_fallback.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() { wibble() }\n\n@external(javascript, \"a\", \"a\")\nfn wibble() -> Nil {\n  Nil\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() { wibble() }

@external(javascript, "a", "a")
fn wibble() -> Nil {
   ↑▔▔▔▔▔           
  Nil
}


----- AFTER RENAME
-- app.gleam

pub fn main() { new_name() }

@external(javascript, "a", "a")
fn new_name() -> Nil {
  Nil
}
